prevent overlap for .powerupHoneycomb

--- a/powerup.css
+++ b/powerup.css
@@ -1042,7 +1042,7 @@ section.powerupOptionsOpen .powerupExpandableArrow {
   padding-left: 0px;
 }
 
-.powerupGauge {
+.powerupGauge, .powerupHoneycomb {
   margin-top: 5px;
 }
 
